--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First Website</title>
+    <title>SEB IS THE BIGGEST FATTY</title>
   </head>
   <body>
     <h1>SEBASTIAN KAVANAGH IS THE BIGGEST FATTY IN THE WORLD</h1>
