--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </p>
     <hr>
     <h2>Made by Aarav the person who is not a fatty unlike seb.</h2>
-    <h2>also my sister is the bets sister in the world</h2>
+    <h2>also my sister is the best sister in the world</h2>
   </body>
 </html>
