--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>SEB IS THE BIGGEST FATTY</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Biggest Fatty</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>SEBASTIAN KAVANAGH IS THE BIGGEST FATTY IN THE WORLD</h1>
-    <hr>
-    <p>
-      If you have heard of the name SEBASTIAN KAVANAGH just beware he is the
-      biggest FATTY in the world.
-    </p>
-    <hr>
-    <h2>Made by Aarav the person who is not a fatty unlike seb.</h2>
-    <h2>also my sister Mischa is the best sister in the world</h2>
+    <button id="revealBtn">Who is the biggest fatty in the world?</button>
+    <div id="result">Sebastian Kavanagh</div>
+
+    <div id="credits">
+      <p>Made by Aarav</p>
+      <p>Mischa And Aaron is the best sister and brother in the world</p>
+    </div>
+
+    <audio id="drumroll" src="drumroll.mp3" preload="auto"></audio>
+    <script src="script.js"></script>
   </body>
 </html>
