--- a/index.html
+++ b/index.html
@@ -4,7 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biggest Fatty</title>
-    <link rel="stylesheet" href="style.css" />
+    <style>
+      body {
+        background-color: #4b0082; /* dark purple */
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-family: Arial, sans-serif;
+        color: white;
+        text-align: center;
+      }
+
+      #revealBtn {
+        background: red;
+        color: white;
+        font-size: 3em;
+        padding: 35px 70px;
+        border: none;
+        border-radius: 20px;
+        cursor: pointer;
+        animation: pulse 1.5s infinite, glow 2s infinite alternate;
+        box-shadow: 0 0 25px rgba(255, 0, 0, 0.7);
+      }
+
+      #revealBtn:hover {
+        background-color: darkred;
+        box-shadow: 0 0 40px rgba(255, 0, 0, 1);
+      }
+
+      @keyframes pulse {
+        0% {
+          transform: scale(1);
+        }
+        50% {
+          transform: scale(1.15);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+
+      @keyframes glow {
+        from {
+          box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
+        }
+        to {
+          box-shadow: 0 0 50px rgba(255, 0, 0, 1);
+        }
+      }
+
+      #result {
+        margin-top: 40px;
+        font-size: 3em;
+        font-weight: bold;
+        display: none;
+      }
+
+      #credits {
+        position: absolute;
+        bottom: 20px;
+        font-size: 1.8em;
+      }
+    </style>
   </head>
   <body>
     <button id="revealBtn">Who is the biggest fatty in the world?</button>
@@ -12,10 +76,39 @@
 
     <div id="credits">
       <p>Made by Aarav</p>
-      <p>Mischa And Aaron is the best sister and brother in the world</p>
+      <p>Harvey is my favourite meth addict</p>
     </div>
 
+    <!-- Drumroll audio -->
     <audio id="drumroll" src="drumroll.mp3" preload="auto"></audio>
-    <script src="script.js"></script>
+
+    <script>
+      const button = document.getElementById("revealBtn");
+      const result = document.getElementById("result");
+      const drumroll = document.getElementById("drumroll");
+
+      button.addEventListener("click", () => {
+        result.style.display = "none";
+
+        // Play drumroll
+        drumroll.currentTime = 0;
+        drumroll.play().catch(() => {
+          alert("Please interact with the page to allow audio playback!");
+        });
+
+        setTimeout(() => {
+          // 1/100 chance to show "Michael Winsor"
+          let randomNumber = Math.floor(Math.random() * 100) + 1;
+          if (randomNumber === 1) {
+            result.textContent = "Michael Winsor";
+          } else {
+            result.textContent = "Sebastian Kavanagh";
+          }
+
+          result.style.display = "block";
+          drumroll.pause();
+        }, 1500); // 1.5 seconds drumroll
+      });
+    </script>
   </body>
 </html>
