--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Biggest Fatty</title>
     <style>
       body {
-        background-color: #4b0082; /* dark purple */
+        background-color: #36013f; /* dark purple */
         margin: 0;
         display: flex;
         flex-direction: column;
@@ -75,17 +75,22 @@
     <div id="result">Sebastian Kavanagh</div>
 
     <div id="credits">
-      <p>Made by Aarav</p>
+      <p>Made By Aarav The Person Who Isn't A Bigback</p>
       <p>Harvey is my favourite meth addict</p>
     </div>
 
     <!-- Drumroll audio -->
     <audio id="drumroll" src="drumroll.mp3" preload="auto"></audio>
+    <!-- Result audios -->
+    <audio id="sebastianAudio" src="sebastian.mp3" preload="auto"></audio>
+    <audio id="michaelAudio" src="michael.mp3" preload="auto"></audio>
 
     <script>
       const button = document.getElementById("revealBtn");
       const result = document.getElementById("result");
       const drumroll = document.getElementById("drumroll");
+      const sebastianAudio = document.getElementById("sebastianAudio");
+      const michaelAudio = document.getElementById("michaelAudio");
 
       button.addEventListener("click", () => {
         result.style.display = "none";
@@ -101,13 +106,17 @@
           let randomNumber = Math.floor(Math.random() * 100) + 1;
           if (randomNumber === 1) {
             result.textContent = "Michael Winsor";
+            michaelAudio.currentTime = 0;
+            michaelAudio.play();
           } else {
             result.textContent = "Sebastian Kavanagh";
+            sebastianAudio.currentTime = 0;
+            sebastianAudio.play();
           }
 
           result.style.display = "block";
           drumroll.pause();
-        }, 1500); // 1.5 seconds drumroll
+        }, 2000); // 1.5 seconds drumroll
       });
     </script>
   </body>
