--- a/index.html
+++ b/index.html
@@ -2,122 +2,137 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>Biggest Fatty</title>
-    <style>
-      body {
-        background-color: #36013f; /* dark purple */
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        font-family: Arial, sans-serif;
-        color: white;
-        text-align: center;
-      }
-
-      #revealBtn {
-        background: red;
-        color: white;
-        font-size: 3em;
-        padding: 35px 70px;
-        border: none;
-        border-radius: 20px;
-        cursor: pointer;
-        animation: pulse 1.5s infinite, glow 2s infinite alternate;
-        box-shadow: 0 0 25px rgba(255, 0, 0, 0.7);
-      }
-
-      #revealBtn:hover {
-        background-color: darkred;
-        box-shadow: 0 0 40px rgba(255, 0, 0, 1);
-      }
-
-      @keyframes pulse {
-        0% {
-          transform: scale(1);
-        }
-        50% {
-          transform: scale(1.15);
-        }
-        100% {
-          transform: scale(1);
-        }
-      }
-
-      @keyframes glow {
-        from {
-          box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
-        }
-        to {
-          box-shadow: 0 0 50px rgba(255, 0, 0, 1);
-        }
-      }
-
-      #result {
-        margin-top: 40px;
-        font-size: 3em;
-        font-weight: bold;
-        display: none;
-      }
-
-      #credits {
-        position: absolute;
-        bottom: 20px;
-        font-size: 1.8em;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Preload font -->
+    <link
+      rel="preload"
+      href="Monocraft-nerd-fonts-patched.ttc"
+      as="font"
+      type="font/ttc"
+      crossorigin
+    />
   </head>
   <body>
-    <button id="revealBtn">Who is the biggest fatty in the world?</button>
-    <div id="result">Sebastian Kavanagh</div>
+    <div class="wrap">
+      <!-- HUD -->
+      <section id="hud" class="card hud">
+        <div class="stat">
+          <div class="stat-label">Bigbacks</div>
+          <div id="score" class="stat-value">0</div>
+        </div>
+        <div class="divider"></div>
+        <div class="stat">
+          <div class="stat-label">Bigbacks / sec</div>
+          <div id="bps" class="stat-value">0</div>
+        </div>
+      </section>
 
+      <!-- Main CTA -->
+      <button id="revealBtn" class="cta">
+        Who is the biggest fatty in the world?
+      </button>
+
+      <div id="result" class="result">Sebastian Kavanagh</div>
+
+      <!-- Actions -->
+      <div class="actions">
+        <button id="shopBtn" class="btn shop-btn">
+          <span class="shop-dot"></span>
+          Shop
+        </button>
+      </div>
+    </div>
+
+    <!-- Shop Modal -->
+    <div id="shop" class="shop-backdrop" aria-hidden="true">
+      <div class="shop-modal card">
+        <div class="shop-header">
+          <h2>Shop</h2>
+          <button id="closeShopBtn" class="btn icon-btn">✕</button>
+        </div>
+
+        <div class="shop-grid">
+          <div class="shop-item card soft">
+            <div class="shop-title">Seb Generator</div>
+            <div class="shop-sub">+1 BPS</div>
+            <div class="shop-row">
+              <button id="buySebBtn" class="btn buy-btn">Buy (Cost: 20)</button>
+              <div id="sebOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Michael Generator</div>
+            <div class="shop-sub">+5 BPS</div>
+            <div class="shop-row">
+              <button id="buyMichaelBtn" class="btn buy-btn">
+                Buy (Cost: 50)
+              </button>
+              <div id="michaelOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Ibrahim Generator</div>
+            <div class="shop-sub">+10 BPS</div>
+            <div class="shop-row">
+              <button id="buyIbrahimBtn" class="btn buy-btn">
+                Buy (Cost: 100)
+              </button>
+              <div id="ibrahimOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Bobby Generator</div>
+            <div class="shop-sub">+10 BPS</div>
+            <div class="shop-row">
+              <button id="buyBobbyBtn" class="btn buy-btn">
+                Buy (Cost: 500)
+              </button>
+              <div id="bobbyOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Aarav Super Mythic Generator</div>
+            <div class="shop-sub">+1000 BPS</div>
+            <div class="shop-row">
+              <button id="buyAaravBtn" class="btn buy-btn">
+                Buy (Cost: 10000)
+              </button>
+              <div id="aaravOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+        </div>
+
+        <p id="errorMsg">Not enough Bigbacks!</p>
+        <p class="shop-hint">
+          Costs increase by <strong>20%</strong> each purchase.
+        </p>
+      </div>
+    </div>
+
+    <!-- Credits -->
     <div id="credits">
       <p>Made By Aarav The Person Who Isn't A Bigback</p>
       <p>Harvey is my favourite meth addict</p>
     </div>
 
-    <!-- Drumroll audio -->
+    <!-- Audio -->
     <audio id="drumroll" src="drumroll.mp3" preload="auto"></audio>
-    <!-- Result audios -->
     <audio id="sebastianAudio" src="sebastian.mp3" preload="auto"></audio>
     <audio id="michaelAudio" src="michael.mp3" preload="auto"></audio>
+    <audio id="ibrahimAudio" src="ibrahim.mp3" preload="auto"></audio>
+    <audio id="bobbyAudio" src="bobby.mp3" preload="auto"></audio>
+    <audio id="peterAudio" src="peter.mp3" preload="auto"></audio>
+    <audio id="aaravAudio" src="aarav.mp3" preload="auto"></audio>
 
-    <script>
-      const button = document.getElementById("revealBtn");
-      const result = document.getElementById("result");
-      const drumroll = document.getElementById("drumroll");
-      const sebastianAudio = document.getElementById("sebastianAudio");
-      const michaelAudio = document.getElementById("michaelAudio");
-
-      button.addEventListener("click", () => {
-        result.style.display = "none";
-
-        // Play drumroll
-        drumroll.currentTime = 0;
-        drumroll.play().catch(() => {
-          alert("Please interact with the page to allow audio playback!");
-        });
-
-        setTimeout(() => {
-          // 1/100 chance to show "Michael Winsor"
-          let randomNumber = Math.floor(Math.random() * 100) + 1;
-          if (randomNumber === 1) {
-            result.textContent = "Michael Winsor";
-            michaelAudio.currentTime = 0;
-            michaelAudio.play();
-          } else {
-            result.textContent = "Sebastian Kavanagh";
-            sebastianAudio.currentTime = 0;
-            sebastianAudio.play();
-          }
-
-          result.style.display = "block";
-          drumroll.pause();
-        }, 2000); // 1.5 seconds drumroll
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
