--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Announcement Banner -->
+    <div id="announcementBanner" class="announcement hidden"></div>
+
     <div class="wrap">
+      <!-- HUD -->
       <div class="hud card soft">
         <div class="stat">
           <div class="stat-label">Bigbacks</div>
@@ -20,30 +24,39 @@
         </div>
       </div>
 
-      <!-- Button with original funny label -->
+      <!-- Main Button -->
       <button id="revealBtn" class="btn">
         Who is the biggest fatty in the world?
       </button>
       <div id="result" class="result"></div>
 
-      <!-- Shop and Leaderboard buttons -->
+      <!-- Actions -->
       <button id="shopBtn" class="btn shop-btn">
         Shop <span class="shop-dot"></span>
       </button>
       <button id="leaderboardBtn" class="btn shop-btn">
         Leaderboard <span class="shop-dot"></span>
       </button>
-
-      <!-- Credits text fully restored -->
-      <p id="credits">Made By Aarav The Person Who Isn't A Bigback</p>
     </div>
+
+    <!-- Footer Credits -->
+    <footer class="footer">
+      <p>Made By Aarav The Person Who Isn't A Bigback</p>
+      <p>Harvey is my favorite meth addict</p>
+    </footer>
 
     <!-- Shop Modal -->
     <div id="shop" class="shop-backdrop" aria-hidden="true">
       <div class="shop-modal card">
-        <h2>Shop</h2>
+        <div class="shop-header">
+          <h2>Shop</h2>
+          <button id="closeShopBtn" class="btn icon-btn" aria-label="Close">
+            ✕
+          </button>
+        </div>
+
         <div class="shop-grid">
-          <div class="shop-item card">
+          <div class="shop-item card soft">
             <div class="shop-title">Seb Generator</div>
             <div class="shop-sub">+1 BB/sec</div>
             <div class="shop-row">
@@ -51,7 +64,8 @@
               <div id="sebOwned" class="owned">Owned: 0</div>
             </div>
           </div>
-          <div class="shop-item card">
+
+          <div class="shop-item card soft">
             <div class="shop-title">Michael Generator</div>
             <div class="shop-sub">+5 BB/sec</div>
             <div class="shop-row">
@@ -61,7 +75,8 @@
               <div id="michaelOwned" class="owned">Owned: 0</div>
             </div>
           </div>
-          <div class="shop-item card">
+
+          <div class="shop-item card soft">
             <div class="shop-title">Ibrahim Generator</div>
             <div class="shop-sub">+10 BB/sec</div>
             <div class="shop-row">
@@ -71,7 +86,8 @@
               <div id="ibrahimOwned" class="owned">Owned: 0</div>
             </div>
           </div>
-          <div class="shop-item card">
+
+          <div class="shop-item card soft">
             <div class="shop-title">Bobby Generator</div>
             <div class="shop-sub">+10 BB/sec</div>
             <div class="shop-row">
@@ -81,7 +97,8 @@
               <div id="bobbyOwned" class="owned">Owned: 0</div>
             </div>
           </div>
-          <div class="shop-item card">
+
+          <div class="shop-item card soft">
             <div class="shop-title">Aarav Super Mythic Generator</div>
             <div class="shop-sub">+1000 BB/sec</div>
             <div class="shop-row">
@@ -92,20 +109,31 @@
             </div>
           </div>
         </div>
-        <p id="errorMsg"></p>
-        <button id="closeShopBtn" class="btn">Close</button>
+
+        <p id="errorMsg" aria-live="polite"></p>
       </div>
     </div>
 
     <!-- Leaderboard Modal -->
     <div id="leaderboardBackdrop" class="lb-backdrop" aria-hidden="true">
       <div class="lb-modal card">
-        <h2>Leaderboard</h2>
+        <div class="shop-header">
+          <h2>Leaderboard</h2>
+          <button
+            id="closeLeaderboardBtn"
+            class="btn icon-btn"
+            aria-label="Close"
+          >
+            ✕
+          </button>
+        </div>
+
         <div id="nameRow" class="name-row">
           <input
             id="playerNameInput"
             class="input"
             placeholder="Enter your name"
+            maxlength="24"
           />
           <button id="saveNameBtn" class="btn">Save</button>
         </div>
@@ -120,8 +148,6 @@
         <p id="leaderboardHint" class="shop-hint">
           Leaderboard updates every ~10s or when your score changes.
         </p>
-
-        <button id="closeLeaderboardBtn" class="btn">Close</button>
       </div>
     </div>
 
@@ -134,7 +160,7 @@
     <audio id="peterAudio" src="peter.mp3"></audio>
     <audio id="aaravAudio" src="aarav.mp3"></audio>
 
-    <!-- Firebase SDKs -->
+    <!-- Firebase (Compat) -->
     <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore-compat.js"></script>
     <script>
