--- a/admin.html
+++ b/admin.html
@@ -60,6 +60,11 @@
       <input id="eventNameInput" type="text" placeholder="Event name">
       <input id="eventMultiplierInput" type="number" placeholder="Multiplier (e.g. 2)">
       <button id="postEventBtn">Set Event</button>
+
+      <!-- Event Preview Banner -->
+      <div id="eventPreview" class="event-banner hidden">
+        📢 <span id="eventPreviewText"></span>
+      </div>
     </section>
 
     <!-- Live Leaderboard -->
