--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Announcement Banner -->
     <div id="announcementBanner" class="announcement hidden"></div>
 
+    <!-- Event Banner -->
+    <div id="eventBanner" class="event hidden"></div>
+
     <div class="wrap">
       <!-- HUD -->
       <div class="hud card soft">
