--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
             <div class="shop-title">Michael Generator</div>
             <div class="shop-sub">+5 BB/sec</div>
             <div class="shop-row">
-              <button id="buyMichaelBtn" class="btn buy-btn">
-                Buy (Cost: 50)
-              </button>
+              <button id="buyMichaelBtn" class="btn buy-btn">Buy (Cost: 50)</button>
               <div id="michaelOwned" class="owned">Owned: 0</div>
             </div>
           </div>
@@ -83,9 +81,7 @@
             <div class="shop-title">Ibrahim Generator</div>
             <div class="shop-sub">+10 BB/sec</div>
             <div class="shop-row">
-              <button id="buyIbrahimBtn" class="btn buy-btn">
-                Buy (Cost: 100)
-              </button>
+              <button id="buyIbrahimBtn" class="btn buy-btn">Buy (Cost: 100)</button>
               <div id="ibrahimOwned" class="owned">Owned: 0</div>
             </div>
           </div>
@@ -94,9 +90,7 @@
             <div class="shop-title">Bobby Generator</div>
             <div class="shop-sub">+10 BB/sec</div>
             <div class="shop-row">
-              <button id="buyBobbyBtn" class="btn buy-btn">
-                Buy (Cost: 500)
-              </button>
+              <button id="buyBobbyBtn" class="btn buy-btn">Buy (Cost: 500)</button>
               <div id="bobbyOwned" class="owned">Owned: 0</div>
             </div>
           </div>
@@ -105,9 +99,7 @@
             <div class="shop-title">Aarav Super Mythic Generator</div>
             <div class="shop-sub">+1000 BB/sec</div>
             <div class="shop-row">
-              <button id="buyAaravBtn" class="btn buy-btn">
-                Buy (Cost: 10000)
-              </button>
+              <button id="buyAaravBtn" class="btn buy-btn">Buy (Cost: 10000)</button>
               <div id="aaravOwned" class="owned">Owned: 0</div>
             </div>
           </div>
@@ -122,22 +114,13 @@
       <div class="lb-modal card">
         <div class="shop-header">
           <h2>Leaderboard</h2>
-          <button
-            id="closeLeaderboardBtn"
-            class="btn icon-btn"
-            aria-label="Close"
-          >
+          <button id="closeLeaderboardBtn" class="btn icon-btn" aria-label="Close">
             ✕
           </button>
         </div>
 
         <div id="nameRow" class="name-row">
-          <input
-            id="playerNameInput"
-            class="input"
-            placeholder="Enter your name"
-            maxlength="24"
-          />
+          <input id="playerNameInput" class="input" placeholder="Enter your name" maxlength="24" />
           <button id="saveNameBtn" class="btn">Save</button>
         </div>
         <p id="youAre" class="you-are hidden"></p>
