--- a/admin.html
+++ b/admin.html
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin Panel — Biggest Fatty</title>
-  <link rel="stylesheet" href="admin.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Panel - Biggest Fatty</title>
+  <link rel="stylesheet" href="admin.css" />
+</head>
+<body>
+  <div class="admin-container">
+    <h1>⚙️ Admin Panel</h1>
+
+    <!-- Login Section -->
+    <div id="loginSection" class="card">
+      <h2>Login</h2>
+      <button id="loginBtn" class="btn full">Sign in with Google</button>
+    </div>
+
+    <!-- Main Panel (hidden until logged in) -->
+    <div id="mainPanel" class="hidden">
+      <!-- Announcements -->
+      <div class="card">
+        <h2>📢 Announcements</h2>
+        <input id="announcementInput" class="input" placeholder="Write announcement..." />
+        <button id="postAnnouncementBtn" class="btn full">Post Announcement</button>
+      </div>
+
+      <!-- Events -->
+      <div class="card">
+        <h2>🎉 Events</h2>
+        <input id="eventNameInput" class="input" placeholder="Event name" />
+        <input id="eventMultiplierInput" class="input" type="number" placeholder="Multiplier (e.g. 2)" />
+        <button id="startEventBtn" class="btn full">Start / Update Event</button>
+        <button id="endEventBtn" class="btn btn-danger full">End Event</button>
+      </div>
+
+      <!-- Leaderboard -->
+      <div class="card">
+        <h2>🏆 Leaderboard (Top 20)</h2>
+        <ol id="adminLeaderboardList" class="leaderboard-list"></ol>
+      </div>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <p>Admin Panel for Biggest Fatty</p>
+  </footer>
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore-compat.js"></script>
 
   <script>
-    // ✅ Your Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyCQLauRwaKyOHmWU-AW4zMzsj15grFWTAc",
       authDomain: "sebisafatty.firebaseapp.com",
@@ -21,60 +61,10 @@
       appId: "1:651122471293:web:35cdf46a44a3d18207dc14",
       measurementId: "G-KYW4WDBXH1"
     };
-
     firebase.initializeApp(firebaseConfig);
-    window._db = firebase.firestore();
-    window._auth = firebase.auth();
+    const auth = firebase.auth();
+    const db = firebase.firestore();
   </script>
-</head>
-<body>
-  <h1>Admin Panel — Biggest Fatty</h1>
-
-  <!-- Login -->
-  <div id="loginBox">
-    <button id="loginBtn">Login with Google</button>
-  </div>
-
-  <!-- Hidden until logged in -->
-  <div id="adminPanel" style="display:none;">
-    <p id="adminInfo"></p>
-
-    <!-- Announcements -->
-    <section>
-      <h2>Post Announcement</h2>
-      <input id="announcementInput" type="text" placeholder="Your message">
-      <button id="postAnnouncementBtn">Post</button>
-    </section>
-
-    <!-- Leaderboard controls -->
-    <section>
-      <h2>Leaderboard Controls</h2>
-      <button id="resetLeaderboardBtn">Reset Entire Leaderboard</button>
-      <input id="resetPlayerInput" type="text" placeholder="Player name">
-      <button id="resetPlayerBtn">Reset Player Score</button>
-    </section>
-
-    <!-- Events -->
-    <section>
-      <h2>Events</h2>
-      <input id="eventNameInput" type="text" placeholder="Event name">
-      <input id="eventMultiplierInput" type="number" placeholder="Multiplier (e.g. 2)">
-      <button id="postEventBtn">Set Event</button>
-
-      <!-- Event Preview Banner -->
-      <div id="eventPreview" class="event-banner hidden">
-        📢 <span id="eventPreviewText"></span>
-      </div>
-    </section>
-
-    <!-- Live Leaderboard -->
-    <section>
-      <h2>Current Leaderboard</h2>
-      <ul id="adminLeaderboard">
-        <li>Loading...</li>
-      </ul>
-    </section>
-  </div>
 
   <script src="admin.js"></script>
 </body>
