--- a/admin.html
+++ b/admin.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Panel - Biggest Fatty</title>
-  <link rel="stylesheet" href="admin.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Biggest Fatty — Admin Panel</title>
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-  <div class="admin-container">
+  <div class="wrap">
     <h1>⚙️ Admin Panel</h1>
+    <p class="subtitle">Manage announcements, events, and leaderboard</p>
 
-    <!-- Login Section -->
-    <div id="loginSection" class="card">
+    <!-- Login -->
+    <div id="loginCard" class="card">
       <h2>Login</h2>
-      <button id="loginBtn" class="btn full">Sign in with Google</button>
+      <button id="loginBtn" class="btn">Sign in with Google</button>
     </div>
 
-    <!-- Main Panel (hidden until logged in) -->
-    <div id="mainPanel" class="hidden">
+    <div id="adminContent" class="hidden">
+
       <!-- Announcements -->
-      <div class="card">
-        <h2>📢 Announcements</h2>
-        <input id="announcementInput" class="input" placeholder="Write announcement..." />
-        <button id="postAnnouncementBtn" class="btn full">Post Announcement</button>
+      <div class="card soft">
+        <h2>Announcements</h2>
+        <input id="announcementInput" class="input" placeholder="Enter announcement" />
+        <button id="postAnnouncementBtn" class="btn">Post Announcement</button>
       </div>
 
       <!-- Events -->
-      <div class="card">
-        <h2>🎉 Events</h2>
+      <div class="card soft">
+        <h2>Events</h2>
         <input id="eventNameInput" class="input" placeholder="Event name" />
-        <input id="eventMultiplierInput" class="input" type="number" placeholder="Multiplier (e.g. 2)" />
-        <button id="startEventBtn" class="btn full">Start / Update Event</button>
-        <button id="endEventBtn" class="btn btn-danger full">End Event</button>
+        <input id="eventMultiplierInput" class="input" type="number" step="0.1" placeholder="Multiplier (e.g. 2)" />
+        <button id="setEventBtn" class="btn">Set Event</button>
+        <button id="clearEventBtn" class="btn danger">Clear Event</button>
       </div>
 
       <!-- Leaderboard -->
-      <div class="card">
-        <h2>🏆 Leaderboard (Top 20)</h2>
-        <ol id="adminLeaderboardList" class="leaderboard-list"></ol>
+      <div class="card soft">
+        <h2>Leaderboard</h2>
+        <ol id="leaderboardList" class="lb-list"></ol>
       </div>
+
+      <!-- Reset Player Score -->
+      <div class="card soft">
+        <h2>Reset Player Score</h2>
+        <p>Enter a player’s exact name to reset their score to 0.</p>
+        <input id="resetPlayerInput" class="input" placeholder="Player name" />
+        <button id="resetPlayerBtn" class="btn danger">Reset Score</button>
+      </div>
+
     </div>
   </div>
 
-  <footer class="footer">
-    <p>Admin Panel for Biggest Fatty</p>
-  </footer>
-
-  <!-- Firebase SDKs -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore-compat.js"></script>
-
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCQLauRwaKyOHmWU-AW4zMzsj15grFWTAc",
@@ -62,10 +67,9 @@
       measurementId: "G-KYW4WDBXH1"
     };
     firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+    window._auth = firebase.auth();
+    window._db = firebase.firestore();
   </script>
-
   <script src="admin.js"></script>
 </body>
 </html>
