--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
         </div>
 
         <div id="nameRow" class="name-row">
-          <input id="playerNameInput" class="input" placeholder="Enter your name" maxlength="24" />
+          <input
+            id="playerNameInput"
+            class="input"
+            placeholder="Enter your name"
+            maxlength="24"
+          />
           <button id="saveNameBtn" class="btn">Save</button>
         </div>
         <p id="youAre" class="you-are hidden"></p>
