--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
           <div class="shop-item card soft">
             <div class="shop-title">Bobby Generator</div>
-            <div class="shop-sub">+10 BB/sec</div>
+            <div class="shop-sub">+100 BB/sec</div>
             <div class="shop-row">
               <button id="buyBobbyBtn" class="btn buy-btn">Buy (Cost: 500)</button>
               <div id="bobbyOwned" class="owned">Owned: 0</div>
@@ -101,6 +101,34 @@
             <div class="shop-row">
               <button id="buyAaravBtn" class="btn buy-btn">Buy (Cost: 10000)</button>
               <div id="aaravOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <!-- 🔹 New Generators -->
+          <div class="shop-item card soft">
+            <div class="shop-title">Alex Generator</div>
+            <div class="shop-sub">+10,000 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyAlexBtn" class="btn buy-btn">Buy (Cost: 100,000)</button>
+              <div id="alexOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Oscar Super Rare Generator</div>
+            <div class="shop-sub">+100,000 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyOscarBtn" class="btn buy-btn">Buy (Cost: 1,000,000)</button>
+              <div id="oscarOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
+          <div class="shop-item card soft">
+            <div class="shop-title">Sebastian Kavanagh Ultimate Generator</div>
+            <div class="shop-sub">+1,000,000,000 BB/sec</div>
+            <div class="shop-row">
+              <button id="buySebUltimateBtn" class="btn buy-btn">Buy (Cost: 1,000,000,000)</button>
+              <div id="sebUltimateOwned" class="owned">Owned: 0</div>
             </div>
           </div>
         </div>
