--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
             </div>
           </div>
 
+          <!-- 🔹 New Peter Generator -->
+          <div class="shop-item card soft">
+            <div class="shop-title">Peter Generator</div>
+            <div class="shop-sub">+3,000 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyPeterBtn" class="btn buy-btn">Buy (Cost: 5,000)</button>
+              <div id="peterOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
+
           <div class="shop-item card soft">
             <div class="shop-title">Aarav Super Mythic Generator</div>
             <div class="shop-sub">+1000 BB/sec</div>
@@ -104,7 +114,6 @@
             </div>
           </div>
 
-          <!-- 🔹 New Generators -->
           <div class="shop-item card soft">
             <div class="shop-title">Alex Generator</div>
             <div class="shop-sub">+10,000 BB/sec</div>
@@ -125,7 +134,7 @@
 
           <div class="shop-item card soft">
             <div class="shop-title">Sebastian Kavanagh Ultimate Generator</div>
-            <div class="shop-sub">+1,000,000,000 BB/sec</div>
+            <div class="shop-sub">+10,000,000 BB/sec</div>
             <div class="shop-row">
               <button id="buySebUltimateBtn" class="btn buy-btn">Buy (Cost: 1,000,000,000)</button>
               <div id="sebUltimateOwned" class="owned">Owned: 0</div>
