--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
           </div>
 
-          <!-- 🔹 New Peter Generator -->
+          <!-- Peter Generator -->
           <div class="shop-item card soft">
             <div class="shop-title">Peter Generator</div>
             <div class="shop-sub">+3,000 BB/sec</div>
@@ -140,6 +140,16 @@
               <div id="sebUltimateOwned" class="owned">Owned: 0</div>
             </div>
           </div>
+
+          <!-- 🔹 New Harvey Meth Lab Generator -->
+          <div class="shop-item card soft">
+            <div class="shop-title">Harvey Meth Lab Generator</div>
+            <div class="shop-sub">+300,000,000 BB/sec</div>
+            <div class="shop-row">
+              <button id="buyHarveyBtn" class="btn buy-btn">Buy (Cost: 5,000,000,000)</button>
+              <div id="harveyOwned" class="owned">Owned: 0</div>
+            </div>
+          </div>
         </div>
 
         <p id="errorMsg" aria-live="polite"></p>
@@ -174,7 +184,7 @@
         </div>
 
         <p id="leaderboardHint" class="shop-hint">
-          Leaderboard updates every ~10s or when your score changes.
+          Leaderboard updates every ~30s or when your score jumps.
         </p>
       </div>
     </div>
